objects/UNITY_Service_Channel_Trade_Mapping__c.object
<CustomObject>
    <description>Maps Service Channel Trades to Miner Trades</description>
    <fields>
        <fullName>UNITY_Customer_Subscriber_ID__c</fullName>
        <description>If this is specified, it means this specific trade mapping applies just to this customer.</description>
        <label>Customer Subscriber ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Miner_Skill_Broad__c</fullName>
        <label>Miner Skill Broad</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Miner_Skill_Group__c</fullName>
        <label>Miner Skill Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Miner_Skill_SubType__c</fullName>
        <label>Miner Skill SubType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Miner_Skill_Type__c</fullName>
        <label>Miner Skill Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Channel_Trade_Desc__c</fullName>
        <label>Service Channel Trade Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Channel_Trade_EqptType__c</fullName>
        <label>Service Channel Trade EqptType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Channel_Trade__c</fullName>
        <label>Service Channel Trade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service Channel Trade Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Customer_Subscriber_ID__c</columns>
        <columns>UNITY_Service_Channel_Trade__c</columns>
        <columns>UNITY_Miner_Skill_Broad__c</columns>
        <columns>UNITY_Miner_Skill_Group__c</columns>
        <columns>UNITY_Miner_Skill_SubType__c</columns>
        <columns>UNITY_Miner_Skill_Type__c</columns>
        <columns>UNITY_Service_Channel_Trade_Desc__c</columns>
        <columns>UNITY_Service_Channel_Trade_EqptType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Service Channel Trade Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Channel Trade Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>